# GTNH_Agent

./: .gitignore  LICENSE  README.md  bootstrap_structure.py  pyproject.toml
config/: env.yaml  gtnh_blocks.generated.yaml  gtnh_blocks.yaml  gtnh_items.generated.yaml  gtnh_items.yaml  gtnh_recipes.json  gtnh_tech_graph.yaml  hardware.yaml  llm_roles.yaml  minecraft.yaml  models.yaml  virtues.yaml
docs/: architecture.md  ipc_protocol_m6.md  llm_role_boundaries.q1.yaml  m6_bot_core_1_7_10.md  phase1_integration.md
scripts/: __init__.py  compact_recipes_for_agent.py  demo_end_to_end.py  demo_offline_agent_step.py  dev_shell.py  ingest_gtnh_semantics.py  ingest_nerd_csv_semantics.py  ingest_nerd_recipes.py  smoke_error_model.py  smoke_llm_stack.py  smoke_scribe_model.py
tests/: conftest.py  test_actions.py  test_agent_loop_stub.py  test_agent_loop_v1.py  test_architecture_integration.py  test_bot_core_impl.py  test_curriculum_engine_basic.py  test_curriculum_engine_phase.py  test_curriculum_learning_integration.py  test_curriculum_learning_orchestrator.py  test_curriculum_learning_properties.py  test_curriculum_loader.py  test_curriculum_projects.py  test_curriculum_skill_view_policy.py  test_env_loader.py  test_error_model_with_fake_backend.py  test_evaluator.py  test_experience_buffer.py  test_failure_mitigation.py  test_full_system_smoke.py  test_lab_integration_happy_path.py  test_lab_integration_skill_view.py  test_llm_role_boundaries.py  test_llm_stack_fake_backend.py  test_m6_observe_contract.py  test_monitoring_controller.py  test_monitoring_dashboard_tui.py  test_monitoring_event_bus.py  test_monitoring_logger.py  test_nav_pathfinder.py  test_observation_critic_encoding.py  test_observation_perf.py  test_observation_pipeline.py  test_p0_p1_env_bridge.py  (+30 more)
(+250 files in other folders)
